# semantic-entity-radar

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  main.py  pyproject.toml
src/: main.py
src/application/dto/: query_dto.py
src/application/services/: citation_mapping_service.py  retrieval_pipeline_service.py  text_generation_service.py
src/application/use_cases/: process_entity_opinion.py  query_opinion_use_case.py
src/domain/entities/: evidence.py  llm_message.py  query.py
src/domain/exceptions/: llm_exceptions.py
src/domain/ports/inbound/: ingestion_use_cases.py  query_use_cases.py
src/domain/ports/outbound/: generation.py  ingestion.py  llm_provider_port.py  retrieval.py
src/domain/services/: llm_orchestrator.py
src/domain/value_objects/: common.py  llm_config.py
src/entrypoints/api/: dependencies.py  error_handlers.py  main.py
src/infrastructure/adapters/inbound/: http_query_controller.py
src/infrastructure/adapters/outbound/: bm25_lexical_adapter.py  embedding_external_model_adapter.py  embedding_fastembed_adapter.py  embedding_utils.py  (+8 more)
src/infrastructure/settings/: app_settings.py
tests/: conftest.py
tests/contract/: test_llm_provider_port.py  test_post_queries_opinion.py  test_retrieval_ports.py
tests/integration/: test_llm_chain_exhaustion.py  test_llm_fallback.py  test_opinion_query_flow.py
tests/notebooks/: pinecone_quick_start.ipynb
tests/unit/: test_adapters_credit_check.py  test_embedding_adapters.py  test_gemini_adapter.py  test_pinecone_reranker_adapter.py  test_pinecone_vector_store_adapter.py  test_qdrant_vector_store_adapter.py
tests/unit/application/: test_query_opinion_use_case.py
