[project]
name = "semantic-entity-radar"
version = "0.1.0"
description = "Side project to know about public entity opinion on social networks"
readme = "README.md"
authors = [
    { name = "Erick Díaz", email = "erickdp@hotmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.135.1",
    "google-genai>=1.67.0",
    "ipykernel>=7.2.0",
    "litellm>=1.82.1",
    "pinecone>=8.1.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "qdrant-client[fastembed]>=1.15.1",
    "tenacity>=9.1.4",
]

[dependency-groups]
dev = [
    "commitizen>=4.13.9",
    "cz-conventional-gitmoji>=0.7.0",
    "fabric>=3.2.2",
    "pre-commit>=4.5.1",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.15.8",
]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "uv"
update_changelog_on_bump = true
major_version_zero = true
